--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Social Network</title>
+    <title>ClassMate</title>
     <link rel="stylesheet" href="app.css">
   </head>
   <body>
@@ -20,11 +20,11 @@
       </nav>
     </header>
     <main>
-      <h1>Welcome to My Social Network</h1>
+      <h1>Welcome to ClassMate  </h1>
       <p>Here, you can find classes, join class discussions, and connect with other students.</p>
     </main>
     <footer>
-      <p>Copyright © My Social Network</p>
+      <p>Copyright © My ClassMate</p>
     </footer>
   </body>
   <script src="app.js"></script>
