--- a/HomeScreen/home.html
+++ b/HomeScreen/home.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header>
+      <img src="logo_transparent.png" alt="My Website Logo">
       <nav>
         <ul>
           <li><button id="homeButton">Home</button></li>
@@ -19,6 +20,7 @@
         </ul>
       </nav>
     </header>
+    
     <main>
       <h1>Welcome to ClassMate  </h1>
       <p>Here, you can find classes, join class discussions, and connect with other students.</p>
