--- a/Messages/ClientSide/Messages.html
+++ b/Messages/ClientSide/Messages.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <header>
+      <img src="logo_transparent.png" alt="My Website Logo">
       <h1>Messages</h1>
     </header>
     <main>
